common/home-assistant/mqtt/extensions/service-mqtt.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: emqx-mqtt
  annotations:
    external-dns.kubernetes.io/provider: internal
    external-dns.kubernetes.io/hostname: mqtt.iot.${LOCAL_INTERNAL_DOMAIN}
spec:
  type: LoadBalancer
  loadBalancerClass: ${CILIUM_LB_CLASS}
  ipFamilyPolicy: PreferDualStack
  externalTrafficPolicy: Local
  ports:
    - name: mqtt
      port: 1883
      protocol: TCP
      targetPort: mqtt
    - name: mqttssl
      port: 8883
      protocol: TCP
      targetPort: mqttssl
  selector:
    app.kubernetes.io/instance: home-assistant-emqx
    app.kubernetes.io/name: emqx
