common/home-assistant/mqtt/extensions/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx-dashboard
  annotations:
    external-dns.kubernetes.io/provider: internal
spec:
  parentRefs:
    - name: emqx-dashboard-listeners
      kind: ListenerSet
      group: gateway.networking.k8s.io
  hostnames:
    - emqx.iot.${LOCAL_INTERNAL_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: emqx
          port: 18083
